--- a/package.json
+++ b/package.json
@@ -1,21 +1,26 @@
 {
   "name": "portfolio",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@testing-library/jest-dom": "^5.17.0",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-scripts": "5.0.1",
-    "web-vitals": "^2.1.4"
-  },
+  "version": "1.0.0",
+  "description": "A dynamic and animated portfolio website",
+  "main": "index.js",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "boxicons": "^2.1.4",
+    "framer-motion": "^7.3.2",
+    "gsap": "^3.12.5",
+    "react": "^18.2.0",
+    "react-bootstrap-icons": "^1.11.4",
+    "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.10.3",
+    "react-scripts": "5.0.1",
+    "styled-components": "^5.3.10"
   },
   "eslintConfig": {
     "extends": [
